wm: Do not allow unsnappable windows to move window grid.

Also do not show phantom window.

Test: manual, WindowSelectorTest.DraggingNonSnapableAppWithSplitView
Bug: 760356
Change-Id: Ida67c83680ebd7614afff341d65134ef2acf35b6
Reviewed-on: https://chromium-review.googlesource.com/641988
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498538}
Former-commit-id: d6dcc0357e7f67ec0979a8a26b8613902f340892